xentask-admin-api/prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xentask-admin-api
  namespace: ws-prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xentask-admin-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xentask-admin-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values: [ "amd64","arm64" ]
      containers:
      - env:
        - name: IS_DEV
          value: "0"
        - name: DEPLOY_ENV
          value: "PROD"
        image: ghcr.io/your-org/xentask/xentask-admin-api:master
        imagePullPolicy: Always
        name: xentask-admin-api
        ports:
        - containerPort: 8080
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /_zReady.php
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /logs
          name: logs
        - mountPath: /xentask
          name: xentask
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - nfs:
          path: /data/nfs/logs
          server: your-nfs-server
        name: logs
      - nfs:
          server: your-nfs-server
          path: /data/nfs/xentask
        name: xentask
