xentask-admin-api/prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ws-prod
  name: xentask-admin-api-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: admin-api.xentask.com
    http:
      paths:
      - backend:
          service:
             name: xentask-admin-api-svc
             port:
               number: 8080
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - admin-api.xentask.com
      secretName: tls-wildcard-xentask
status:
  loadBalancer:
    ingress:
